Fix: Remove JBang directives from Maven-compiled CLI version
- Remove JBang directives (shebang, //JAVA, //DEPS, etc.) from src/main/java version
- Keep JBang directives only in root LlamaTornadoCli.java for JBang usage
- Update javadoc to clarify this version is for Maven builds
- Fixes Maven compilation errors caused by JBang-specific syntax
- Root LlamaTornadoCli.java remains unchanged for JBang script usage